log/build_2025-06-18_09-31-35/temp_sensor/stdout_stderr.log
running egg_info
writing ../../build/temp_sensor/temp_sensor.egg-info/PKG-INFO
writing dependency_links to ../../build/temp_sensor/temp_sensor.egg-info/dependency_links.txt
writing entry points to ../../build/temp_sensor/temp_sensor.egg-info/entry_points.txt
writing requirements to ../../build/temp_sensor/temp_sensor.egg-info/requires.txt
writing top-level names to ../../build/temp_sensor/temp_sensor.egg-info/top_level.txt
reading manifest file '../../build/temp_sensor/temp_sensor.egg-info/SOURCES.txt'
writing manifest file '../../build/temp_sensor/temp_sensor.egg-info/SOURCES.txt'
running build
running build_py
copying temp_sensor/ATH10_temp_readings.py -> /home/paakwasi/ros2_ws/build/temp_sensor/build/lib/temp_sensor
running install
running install_lib
copying /home/paakwasi/ros2_ws/build/temp_sensor/build/lib/temp_sensor/ATH10_temp_readings.py -> /home/paakwasi/ros2_ws/install/temp_sensor/lib/python3.10/site-packages/temp_sensor
byte-compiling /home/paakwasi/ros2_ws/install/temp_sensor/lib/python3.10/site-packages/temp_sensor/ATH10_temp_readings.py to ATH10_temp_readings.cpython-310.pyc
running install_data
  File "/home/paakwasi/ros2_ws/install/temp_sensor/lib/python3.10/site-packages/temp_sensor/ATH10_temp_readings.py", line 37
    float(temp).temperature() , float(humidty).relative_humidity() = data.split('|').strip()
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?

running install_egg_info
removing '/home/paakwasi/ros2_ws/install/temp_sensor/lib/python3.10/site-packages/temp_sensor-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/temp_sensor/temp_sensor.egg-info to /home/paakwasi/ros2_ws/install/temp_sensor/lib/python3.10/site-packages/temp_sensor-0.0.0-py3.10.egg-info
running install_scripts
Installing Temp_reading script to /home/paakwasi/ros2_ws/install/temp_sensor/lib/temp_sensor
writing list of installed files to '/home/paakwasi/ros2_ws/build/temp_sensor/install.log'
